changed background color and fixed log subscription

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,9 @@
             ],
             "styles": [
               {
+                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+              },
+              {
                 "input": "src/theme/variables.scss"
               },
               {
@@ -98,7 +101,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "styles": [],
+            "styles": [
+              {
+                "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
+              }
+            ],
             "scripts": [],
             "assets": [
               {
@@ -128,7 +135,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
