--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/status-bar": "^5.18.0",
     "@ionic/angular": "^4.11.7",
     "@ionic/storage": "^2.2.0",
+    "@progress/kendo-angular-charts": "^4.1.3",
     "build": "0.1.4",
     "cordova": "^9.0.0",
     "cordova-android": "^8.1.0",
@@ -51,7 +52,14 @@
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "uuid": "^3.3.3",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@progress/kendo-angular-common": "^1.0.0",
+    "@progress/kendo-angular-intl": "^2.0.0",
+    "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-drawing": "^1.1.2",
+    "@progress/kendo-angular-popup": "^3.0.0",
+    "hammerjs": "^2.0.0",
+    "@progress/kendo-theme-default": "latest"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
