--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^8.2.14",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
@@ -30,6 +31,12 @@
     "@ionic/angular": "^4.11.7",
     "@ionic/storage": "^2.2.0",
     "@progress/kendo-angular-charts": "^4.1.3",
+    "@progress/kendo-angular-common": "^1.0.0",
+    "@progress/kendo-angular-intl": "^2.0.0",
+    "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-popup": "^3.0.0",
+    "@progress/kendo-drawing": "^1.1.2",
+    "@progress/kendo-theme-default": "latest",
     "build": "0.1.4",
     "cordova": "^9.0.0",
     "cordova-android": "^8.1.0",
@@ -45,6 +52,7 @@
     "firebase": "^7.6.1",
     "firebase-admin": "^8.9.0",
     "firebase-tools": "^7.6.1",
+    "hammerjs": "^2.0.0",
     "ionic": "^5.4.15",
     "magic.css": "^1.4.5",
     "ngx-order-pipe": "^2.0.4",
@@ -52,14 +60,7 @@
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "uuid": "^3.3.3",
-    "zone.js": "~0.9.1",
-    "@progress/kendo-angular-common": "^1.0.0",
-    "@progress/kendo-angular-intl": "^2.0.0",
-    "@progress/kendo-angular-l10n": "^2.0.0",
-    "@progress/kendo-drawing": "^1.1.2",
-    "@progress/kendo-angular-popup": "^3.0.0",
-    "hammerjs": "^2.0.0",
-    "@progress/kendo-theme-default": "latest"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
@@ -71,6 +72,7 @@
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/lab": "3.0.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
