--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "cordova-plugin-androidx-adapter": "^1.1.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-firebase": "^2.0.5",
+    "cordova-plugin-firebasex": "^7.0.2",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-multidex": "^0.1.4",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.6.11",
