--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "npm-force-resolutions": "0.0.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
@@ -129,5 +130,8 @@
       "android",
       "browser"
     ]
+  },
+  "resolutions": {
+    "@babel/preset-env": "^7.8.7"
   }
 }
